<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtInDock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_dock" />

    <CheckBox
        android:id="@+id/chkDisableScreenLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_screen_lock" />

    <CheckBox
        android:id="@+id/chkDimDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dim_display" />

    <CheckBox
        android:id="@+id/chkDisableKeyLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_key_light" />

    <CheckBox
        android:id="@+id/chkVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringer_to_vibrate" />

</LinearLayout>